--- a/.github/workflows/run-matlab-tests-SH.yml
+++ b/.github/workflows/run-matlab-tests-SH.yml
@@ -7,5 +7,7 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
       - name: Run tests
         uses: matlab-actions/run-tests@v2
