--- a/.github/workflows/run-matlab-tests-SH.yml
+++ b/.github/workflows/run-matlab-tests-SH.yml
@@ -1,4 +1,4 @@
-name: Run MATLAB Tests on Self-Hosted Runner
+name: Run MATLAB Tests on self-hosted runner
 on: [push]
 jobs:
   my-job:
@@ -9,5 +9,10 @@ jobs:
         uses: actions/checkout@v4
         with:
           lfs: true
+      - name: Checkout LFS objects
+        run: git lfs checkout
       - name: Run tests
         uses: matlab-actions/run-tests@v2
+        with: 
+          test-results-junit: test-results/results.xml
+          logging-level: detailed
