--- a/.github/workflows/run-matlab-tests-SH.yml
+++ b/.github/workflows/run-matlab-tests-SH.yml
@@ -8,9 +8,9 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
         with:
-          lfs: true
-      - name: Checkout LFS objects
-        run: "C:\\Program Files\\Git\\cmd\\git.exe" lfs checkout
+          lfs: 'true'
+          submodules: 'recursive'
+          ssh-key: ${{ secrets.ssh_key }}
       - name: Run tests
         uses: matlab-actions/run-tests@v2
         with: 
