--- a/.github/workflows/run-matlab-tests-SH.yml
+++ b/.github/workflows/run-matlab-tests-SH.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           lfs: 'true'
           submodules: 'recursive'
-          ssh-key: ${{ secrets.ssh_key }}
+          ssh-key: ${{ secrets.SSH_KEY }}
       - name: Run tests
         uses: matlab-actions/run-tests@v2
         with: 
