--- a/.github/workflows/run-matlab-tests.yml
+++ b/.github/workflows/run-matlab-tests.yml
@@ -12,7 +12,14 @@ jobs:
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
         with:
-          products: Deep_Learning_Toolbox Computer_Vision_Toolbox Signal_Processing_Toolbox Image_Processing_Toolbox Statistics_and_Machine_Learning_Toolbox
+          cache: true
+          products: |
+            Deep_Learning_Toolbox
+            Computer_Vision_Toolbox
+            Signal_Processing_Toolbox
+            Image_Processing_Toolbox
+            Statistics_and_Machine_Learning_Toolbox
+            Deep_Learning_Toolbox_Model_for_Xception_Network
       - name: Run tests and generate artifacts
         uses: matlab-actions/run-tests@v2
         with:
