Add new triggers

--- a/.github/workflows/run-matlab-tests.yml
+++ b/.github/workflows/run-matlab-tests.yml
@@ -1,5 +1,9 @@
 name: Generate Test and Coverage Artifacts on GitHub-Hosted Runner
-on: [push]
+on: 
+  push:
+  workflow_dispatch:
+  schedule:
+    - cron:  '24 16 * * 2' # schedule a weekly build to keep caches warm
 jobs:
   my-job:
     name: Run MATLAB Tests and Generate Artifacts
