--- a/.github/workflows/run-matlab-tests.yml
+++ b/.github/workflows/run-matlab-tests.yml
@@ -32,10 +32,18 @@ jobs:
             Deep_Learning_Toolbox_Model_for_ResNet-50_Network
             Deep_Learning_Toolbox_Model_for_VGG-16_Network
             Deep_Learning_Toolbox_Model_for_VGG-19_Network
+      
       - name: Run MATLAB build (currently code checks and tests)
         uses: matlab-actions/run-build@v2
+
       - name: Upload Test & coverage Results 
         uses: actions/upload-artifact@v4
         with:
           name: test-and-coverage-results
           path: test-results
+
+      - name: Upload Toolbox (mltbx)
+        uses: actions/upload-artifact@v4
+        with:
+          name: Tool Validation Kit.mltbx
+          path: release/Tool Validation Kit.mltbx
