--- a/.github/workflows/run-matlab-tests.yml
+++ b/.github/workflows/run-matlab-tests.yml
@@ -11,10 +11,10 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-13, macos-14]
         
-    name: Run MATLAB Tests and Generate Artifacts
+    name: Build Toolbox
     runs-on: ${{ matrix.os }}
     steps:
-      - name: Support longpaths
+      - name: Support long paths
         if: ${{ matrix.os == 'windows-latest' }}
         run: git config --system core.longpaths true
         
@@ -47,12 +47,12 @@ jobs:
       - name: Upload Test & coverage Results 
         uses: actions/upload-artifact@v4
         with:
-          name: Test and Coverage results for ${{ matrix.os }}
+          name: ${{ matrix.os }} Results
           path: test-results
 
       - name: Upload Toolbox (mltbx)
         if: ${{ matrix.os == 'ubuntu-latest' }}
         uses: actions/upload-artifact@v4
         with:
-          name: Tool Validation Kit Toolbox
+          name: Tool Validation Kit
           path: release/Tool Validation Kit.mltbx
