--- a/.github/workflows/run-matlab-tests.yml
+++ b/.github/workflows/run-matlab-tests.yml
@@ -24,7 +24,7 @@ jobs:
         uses: matlab-actions/setup-matlab@v2
         with:
           cache: true
-          release: R2025a
+          release: R2025b
           products: |
             Deep_Learning_Toolbox
             Computer_Vision_Toolbox
